--- a/index.html
+++ b/index.html
@@ -135,7 +135,12 @@
            <div class="links-forms"> 
 
             <!-------------------------------- links -------------------------------->
-             <div class="links">links here</div>
+             <div class="links">links here
+               <a href="https://web.facebook.com/?_rdc=1&_rdr"><img src="asserts\images\iconfinder_circle-facebook__317752.png" alt=""></a>
+               <a href="https://www.linkedin.com/feed/"><img src="asserts\images\iconfinder_2018_social_media_popular_app_logo_linkedin_3225190.png" alt=""></a>
+               <a href="https://twitter.com/home?lang=en"><img src="asserts\images\iconfinder_1_Twitter2_colored_svg_5296515.png" alt=""></a>
+               <a href="https://www.instagram.com/"><img src="asserts\images\iconfinder_social_media_applications_3-instagram_4102579.png" alt=""></a>
+             </div>
              
 
              <!------------------------------- forms ------------------------------->
